--- a/style.css
+++ b/style.css
@@ -426,27 +426,27 @@ body{
         height: 95vh;
     }
     .hero__card{
-        top: 28%;
+        top: 22%;
         left: 11%;
         right: 25%;
     }
     .hero__title{
-        font-size: 7rem;
+        font-size: 5.5rem;
         font-weight: 500;
    }
    .hero__sub{
-    font-size: 5rem;
+    font-size: 2.8rem;
    }
    .hero__btn,
    .hero__btn1{
-    padding: 1rem 2rem;
-    font-size: 1.4rem;
-    margin-top: 1.8rem;
+    padding: 0.8rem 1.8rem;
+    font-size: 1.3rem;
+    margin-top: 1.5rem;
    }
    .hero__low{
-       margin-top: 0.9rem;
-       font-size: 2rem;
-       margin-top: 1.1rem;
+       margin-top: 0.7rem;
+       font-size: 1.6rem;
+       margin-top: 0.8rem;
    }
    .mid__img{
        display: none;
@@ -456,12 +456,12 @@ body{
        margin-left: 2rem;
     }
     .mid__dis{
-        font-size: 2rem;
+        font-size: 1.7rem;
         margin: 0.6rem;
         margin-left: 2rem;
     }  
     .mid__dis1{
-        font-size: 2rem;
+        font-size: 1.7rem;
         margin: 0.6rem;
         margin-left: 2rem;
     }   
@@ -506,13 +506,13 @@ body{
      }
      .menu__dis1{
          position: relative;
-         font-size: 8.5rem;
+         font-size: 5.5rem;
          color: white;
          text-align: center;
      }
      .menu__dis2{
          position: relative;
-         margin-top: 2.5rem;
+         margin-top: 2rem;
          font-size: 2rem;
          color: white;
          text-align: center;
@@ -538,11 +538,12 @@ body{
      .customer__review{
          display: flex;
          gap: 0.6rem;
-         width: 100rem;
+         width: 65rem;
          margin-left: 10rem;
      }
      .customer__review1{
          width: 100rem;
+         padding: 0.4rem;
      }
      .review1__head{
          font-size: 1.5rem;
@@ -600,7 +601,7 @@ body{
      .foot__txt,
      .foot__btn{
          margin-top: 0.8rem;
-         font-size: 1.2rem;
+         font-size: 1rem;
      }
      .foot__btn{
          margin-left: 18rem;
